kubernetes/phabricator-proxy/Deployment.yaml
# Copyright 2020 Google LLC
#
# Licensed under the the Apache License v2.0 with LLVM Exceptions (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://llvm.org/LICENSE.txt
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: phabricator-proxy
  namespace: buildkite
spec:
  selector:
    matchLabels:
      app: phabricator-proxy
  replicas: 1 
  template:
    metadata:
      labels:
        app: phabricator-proxy
    spec:
      containers:
      - name: phabricator-proxy
        image: gcr.io/llvm-premerge-checks/phabricator-proxy
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 2
          failureThreshold: 5
        resources:
          limits:
            cpu: 500m
            memory: 1500Mi
          requests:
            cpu: 500m
            memory: 1500Mi
      nodeSelector:
        cloud.google.com/gke-nodepool: default-pool
