kubernetes/phabricator-proxy/Ingress.yaml
# This ingress matches ALL requests to nginx.
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress-all
  namespace: buildkite
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "web-static-ip"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: http-auth
    nginx.ingress.kubernetes.io/auth-realm: "LLVM pre-merge checks"
    # cert-manager
    cert-manager.io/cluster-issuer: letsencrypt-staging
    acme.cert-manager.io/http01-edit-in-place: "true"
    # ^ cert-manager
spec:
  # cert-manager
  tls:
  - secretName: llvm-premerge-staging-cert
    hosts:
    - llvm-premerge.org
  # ^ cert-manager
  rules:
  - http:
      paths:
      - backend:
          serviceName: phabricator-proxy
          servicePort: 8080
